style: fix span font-size and chips spacings

--- a/packages/ui-stencil/src/styles/_mixins.scss
+++ b/packages/ui-stencil/src/styles/_mixins.scss
@@ -77,10 +77,6 @@
   margin: 0;
   padding: 0;
 
-  @media (--md-min) {
-    font-size: var(--font-size-xs, $font-size-xs);
-  }
-
   @if $variant == 'primary' {
     color: var(--text-color-primary, text-color('primary'));
   }
